fix description egorf

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -107,7 +107,7 @@
   "tournament_paella_program_mon": "Montag",
   "tournament_paella_program_mon_desc": "Abreise der Teams",
   "tournament_egorf_title": "Offizielles Programm EGORF 2026",
-  "tournament_egorf_description": "Das spannendste Rugbyturnier in Valencia.",
+  "tournament_egorf_description": "Internationales Veteranen-Rugby-Turnier in Valencia. Vom 5. bis 8. Juni 2026 wird Valencia Gastgeber der 18. Ausgabe des European Golden Oldies Rugby Festival (EGORF) sein. Dieses emblematische Festival bringt Veteranen-Teams aus ganz Europa zusammen, um Rugby in seinem Wesen zu feiern: Kameradschaft, Respekt und Spaß. Mit seiner exzellenten Infrastruktur, einladender Atmosphäre und reichem kulturellen Angebot bietet Valencia die perfekte Kulisse für ein unvergessliches sportliches und soziales Erlebnis. EGORF2026 verspricht, die Brüderlichkeit des Rugby zu stärken und einen positiven Eindruck in der Stadt und bei ihren Besuchern zu hinterlassen.",
   "tournament_egorf_preregister": "Melde dein Rugbyteam für ein sonniges Turnier im Sommer 2026 in Valencia über das Formular an und wir werden dich für weitere Details kontaktieren.",
   "tournament_egorf_signup_btn": "Anmelden",
   "tournament_egorf_expect_title": "Was dich erwartet",
