--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -113,8 +113,8 @@
   "tournament_paella_program_mon": "Lundi",
   "tournament_paella_program_mon_desc": "Départ des équipes",
   "tournament_egorf_title": "Programme officiel du EGORF 2026",
-  "tournament_egorf_description": "Le tournoi de rugby le plus excitant de Valencia",
-  "tournament_egorf_preregister": "Pré-inscrivez votre équipe de hockey pour un tournoi ensoleillé à Valencia en juillet 2025 via le formulaire et nous vous contacterons pour plus de détails.",
+  "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.",
+  "tournament_egorf_preregister": "Pré-inscrivez votre équipe de rugby pour un tournoi ensoleillé à Valencia en juillet 2026 via le formulaire et nous vous contacterons pour plus de détails.",
   "tournament_egorf_signup_btn": "S'inscrire",
   "tournament_egorf_expect_title": "Ce que vous pouvez attendre",
   "tournament_egorf_expect_1": "Matches de rugby",
