--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -110,8 +110,8 @@
   "tournament_paella_program_mon": "Monday",
   "tournament_paella_program_mon_desc": "Departure of teams",
   "tournament_egorf_title": "EGORF 2026 Official Program",
-  "tournament_egorf_description": "The most exciting rugby tournament in Valencia",
-  "tournament_egorf_preregister": "Pre-register your hockey team for a sunny Valencia tournament in the summer of 2025 via the form and we will contact you for further details.",
+  "tournament_egorf_description": "International Veteran Rugby Tournament in Valencia. From 5 to 8 June 2026, Valencia will host the 18th edition of the European Golden Oldies Rugby Festival (EGORF). This iconic festival brings together veteran teams from all over Europe to celebrate rugby in its essence: camaraderie, respect, and fun. With its excellent infrastructure, welcoming atmosphere, and rich cultural offering, Valencia offers the perfect setting for an unforgettable sports and social experience. EGORF2026 promises to strengthen the brotherhood of rugby and leave a positive impression on the city and its visitors.",
+  "tournament_egorf_preregister": "Pre-register your rugby team for a tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
   "tournament_egorf_signup_btn": "Sign up",
   "tournament_egorf_expect_title": "What to expect",
   "tournament_egorf_expect_1": "Intense rugby matches",
