--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -113,8 +113,8 @@
   "tournament_paella_program_mon": "Lunes",
   "tournament_paella_program_mon_desc": "Regreso de equipos",
   "tournament_egorf_title": "EGORF 2026 Official Program",
-  "tournament_egorf_description": "The most exciting rugby tournament in Valencia",
-  "tournament_egorf_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
+  "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promete fortalecer la fraternidad del rugby y dejar una huella positiva en la ciudad y sus visitantes.",
+  "tournament_egorf_preregister": "Preinscribe a tu equipo de rugby para un torneo en Valencia en el verano de 2026 a través del formulario y nos pondremos en contacto contigo para más detalles.",
   "tournament_egorf_signup_btn": "Sign up",
   "tournament_egorf_expect_title": "What to expect",
   "tournament_egorf_expect_1": "Intense rugby matches",
