--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -110,8 +110,8 @@
   "tournament_paella_program_mon": "Lunedì",
   "tournament_paella_program_mon_desc": "Partenza delle squadre",
   "tournament_egorf_title": "Programma ufficiale del EGORF 2026",
-  "tournament_egorf_description": "Il torneo di rugby più emozionante di Valencia",
-  "tournament_egorf_preregister": "Preinscrivi il tuo team di hockey per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
+  "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.",
+  "tournament_egorf_preregister": "Preinscrivi il tuo team di rugby per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
   "tournament_egorf_signup_btn": "Iscriviti",
   "tournament_egorf_expect_title": "Cosa puoi aspettarti",
   "tournament_egorf_expect_1": "Partite di rugby",
