--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -113,7 +113,7 @@
     "tournament_paella_program_mon": "Segunda-feira",
     "tournament_paella_program_mon_desc": "Retorno de equipes",
     "tournament_egorf_title": "Programa Oficial do EGORF 2026",
-    "tournament_egorf_description": "O torneio de rugby mais emocionante de Valencia",
+    "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.", 
     "tournament_egorf_preregister": "Pré-inscreva seu time de hóquei para um torneio soleado em Valencia no verão de 2026 através do formulário e nós entraremos em contato com você para mais detalhes.",
     "tournament_egorf_signup_btn": "Inscreva-se",
     "tournament_egorf_expect_title": "O que você pode esperar",
