--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -60,7 +60,7 @@
   "experience_hockey_male_team": "Amsterdam HC",
   "experience_hockey_male_sport": "Hockey",
   "experience_hockey_male_country": "Nederland",
-  "experience_hockey_male_story": "We wisten niet of we meer op het veld zouden rennen of in de bar zouden gaan. Uiteindelijk deden we beide. Het was een geweldige reis, alles gemeten op de details maar met flexibiliteit. De organisatoren waren mensen van het sport, je merkt het: entienden nuestros ritmos, nuestros chistes y nuestras lesiones. El torneo tuvo nivel, pero sin agobios. Conocimos equipos de media Europa, y terminamos bailando con ellos en una bodega al lado del mar. ¡Un lujo! Ya estamos preguntando por la edición del año que viene. Ojalá podamos repetir con la misma tropa.",
+  "experience_hockey_male_story": "We wisten niet of we meer op het veld zouden rennen of in de bar zouden gaan. Uiteindelijk deden we beide. Het was een geweldige reis, alles gemeten op de details maar met flexibiliteit. De organisatoren waren mensen van de sport, je merkt het: ze begrijpen onze ritmes, onze grappen en onze blessures. Het toernooi had niveau, maar zonder stress. We ontmoetten teams uit heel Europa en eindigden met dansen in een wijnkelder aan zee. Een droom! We vragen al naar de editie van volgend jaar. Hopelijk kunnen we terugkomen met hetzelfde team.",
   "experience_hockey_male_name": "Jeroen V., portero veterano del Amsterdam HC",
   "experience_hockey_female_team": "London Ladies HC",
   "experience_hockey_female_sport": "Hockey",
@@ -89,57 +89,57 @@
   "upcoming_tournaments_description_3": "Van 11 tot 14 juni, in Valencia, Spanje.",
   "more_information": "Meer informatie",
   "tournament_paella_title": "Paella Cup 2026",
-  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
-  "tournament_paella_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
-  "tournament_paella_signup_btn": "Sign up",
-  "tournament_paella_expect_title": "What to expect",
-  "tournament_paella_expect_1": "Hockey matches",
-  "tournament_paella_expect_2": "Welcome party",
-  "tournament_paella_expect_3": "Farewell party",
-  "tournament_paella_program_title": "Program",
-  "tournament_paella_program_arrival": "Arrival",
-  "tournament_paella_program_arrival_desc": "Check-in and reception of teams",
-  "tournament_paella_program_wed": "Wednesday",
-  "tournament_paella_program_wed_desc": "Hockey matches",
-  "tournament_paella_program_fri": "Friday",
-  "tournament_paella_program_fri_desc": "Semifinals",
-  "tournament_paella_program_sat": "Saturday",
-  "tournament_paella_program_sat_desc": "Final and award ceremony",
-  "tournament_paella_program_sun": "Sunday",
-  "tournament_paella_program_sun_desc": "Free day and departure",
-  "tournament_paella_program_mon": "Monday",
-  "tournament_paella_program_mon_desc": "Departure of teams",
-  "tournament_egorf_title": "EGORF 2026 Official Program",
-  "tournament_egorf_description": "International Veteran Rugby Tournament in Valencia. From 5 to 8 June 2026, Valencia will host the 18th edition of the European Golden Oldies Rugby Festival (EGORF). This iconic festival brings together veteran teams from all over Europe to celebrate rugby in its essence: camaraderie, respect, and fun. With its excellent infrastructure, welcoming atmosphere, and rich cultural offering, Valencia offers the perfect setting for an unforgettable sports and social experience. EGORF2026 promises to strengthen the brotherhood of rugby and leave a positive impression on the city and its visitors.",
-  "tournament_egorf_preregister": "Pre-register your rugby team for a tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
-  "tournament_egorf_signup_btn": "Sign up",
-  "tournament_egorf_expect_title": "What to expect",
-  "tournament_egorf_expect_1": "Intense rugby matches",
-  "tournament_egorf_expect_2": "Welcome ceremony at Umbracle",
-  "tournament_egorf_expect_3": "Closing ceremony at City of Arts",
-  "tournament_egorf_program_title": "Program",
-  "tournament_egorf_program_thu": "Thursday",
-  "tournament_egorf_program_thu_desc": "📌 Team arrival – All day\n📌 Welcome Ceremony – 20:00h | Umbracle Terrace 🌟",
-  "tournament_egorf_program_fri": "Friday",
-  "tournament_egorf_program_fri_desc": "🏉 Match Day – From 9:00h",
-  "tournament_egorf_program_sat": "Saturday",
-  "tournament_egorf_program_sat_desc": "🌴 Free Day",
-  "tournament_egorf_program_sun": "Sunday",
-  "tournament_egorf_program_sun_desc": "🏉 Match Day – From 9:00h\n🏆 Closing Ceremony – 20:00h | City of Arts and Sciences 🎇",
-  "tournament_egorf_program_mon": "Monday",
-  "tournament_egorf_program_mon_desc": "Departure of teams",
-  "back": "Back",
+  "tournament_paella_description": "Internationaal Veteranen Hockey Toernooi in Valencia. Van 12 tot 14 juni 2025 zal Mister Valencia de tiende editie van de Paella Cup organiseren. Dit prestigieuze toernooi staat bekend om zijn perfecte mix van sport, cultuur en sociale activiteiten, alles begeleid door het aangename Spaanse klimaat dat een unieke en onvergetelijke sfeer creëert.",
+  "tournament_paella_preregister": "Pre-registreer je hockeyteam voor een zonnig toernooi in Valencia in de zomer van 2026 via het formulier en we nemen contact met je op voor meer details.",
+  "tournament_paella_signup_btn": "Inschrijven",
+  "tournament_paella_expect_title": "Wat je kunt verwachten",
+  "tournament_paella_expect_1": "Hockey wedstrijden",
+  "tournament_paella_expect_2": "Welkomstfeest",
+  "tournament_paella_expect_3": "Afscheidfeest",
+  "tournament_paella_program_title": "Programma",
+  "tournament_paella_program_arrival": "Aankomst",
+  "tournament_paella_program_arrival_desc": "Check-in en ontvangst van teams",
+  "tournament_paella_program_wed": "Woensdag",
+  "tournament_paella_program_wed_desc": "Hockey wedstrijden",
+  "tournament_paella_program_fri": "Vrijdag",
+  "tournament_paella_program_fri_desc": "Halve finales",
+  "tournament_paella_program_sat": "Zaterdag",
+  "tournament_paella_program_sat_desc": "Finale en prijsuitreiking",
+  "tournament_paella_program_sun": "Zondag",
+  "tournament_paella_program_sun_desc": "Vrije dag en vertrek",
+  "tournament_paella_program_mon": "Maandag",
+  "tournament_paella_program_mon_desc": "Vertrek van teams",
+  "tournament_egorf_title": "EGORF 2026",
+  "tournament_egorf_description": "Internationaal Veteranen Rugby Toernooi in Valencia. Van 5 tot 8 juni 2026 zal Valencia gastheer zijn van de 18e editie van het European Golden Oldies Rugby Festival (EGORF). Dit iconische festival brengt veteraan teams uit heel Europa samen om rugby te vieren in zijn essentie: kameraadschap, respect en plezier. Met zijn uitstekende infrastructuur, gastvrije sfeer en rijke culturele aanbod biedt Valencia de perfecte setting voor een onvergetelijke sportieve en sociale ervaring. EGORF2026 belooft de broederschap van rugby te versterken en een positieve indruk achter te laten op de stad en haar bezoekers.",
+  "tournament_egorf_preregister": "Pre-registreer je rugbyteam voor een toernooi in Valencia in de zomer van 2026 via het formulier en we nemen contact met je op voor meer details.",
+  "tournament_egorf_signup_btn": "Inschrijven",
+  "tournament_egorf_expect_title": "Wat je kunt verwachten",
+  "tournament_egorf_expect_1": "Intense rugby wedstrijden",
+  "tournament_egorf_expect_2": "Welkomstceremonie bij Umbracle",
+  "tournament_egorf_expect_3": "Sluitingsceremonie bij City of Arts",
+  "tournament_egorf_program_title": "Programma",
+  "tournament_egorf_program_thu": "Donderdag",
+  "tournament_egorf_program_thu_desc": "📌 Team aankomst – Hele dag\n📌 Welkomstceremonie – 20:00h | Umbracle Terras 🌟",
+  "tournament_egorf_program_fri": "Vrijdag",
+  "tournament_egorf_program_fri_desc": "🏉 Wedstrijddag – Vanaf 9:00h",
+  "tournament_egorf_program_sat": "Zaterdag",
+  "tournament_egorf_program_sat_desc": "🌴 Vrije dag",
+  "tournament_egorf_program_sun": "Zondag",
+  "tournament_egorf_program_sun_desc": "🏉 Wedstrijddag – Vanaf 9:00h\n🏆 Sluitingsceremonie – 20:00h | Stad van Kunsten en Wetenschappen 🎇",
+  "tournament_egorf_program_mon": "Maandag",
+  "tournament_egorf_program_mon_desc": "Vertrek van teams",
+  "back": "Terug",
   "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
   "tournament_mal_altura_description": "Laatste week in mei 2026 in Alcala de la Selva, een hele dorp in de Comunité Valenciana, om rugby met vrienden te genieten, goede muziek en een grote welkomst- en afscheidsfeest.",
-  "tournament_mal_altura_preregister": "Pre-register your rugby team for a sunny Valencia tournament in the summer of 2025 via the form and we will contact you for further details.",
-  "tournament_mal_altura_signup_btn": "Sign up",
-  "tournament_mal_altura_expect_title": "What to expect",
-  "tournament_mal_altura_expect_1": "Rugby matches",
-  "tournament_mal_altura_expect_2": "Welcome party",
-  "tournament_mal_altura_expect_3": "Farewell party",
-  "tournament_mal_altura_program_title": "Program",
-  "tournament_mal_altura_program_day1": "Donderdag - Arrival",
-  "tournament_mal_altura_program_day1_desc": "Arrival of teams, presentation of the tournament and welcome party",
-  "tournament_mal_altura_program_day2": "Vrijdag - Competition",
-  "tournament_mal_altura_program_day2_desc": "Rugby matches during the whole day, in 7vs7 mode on the field, a 15-minute and a 10-minute half"
+  "tournament_mal_altura_preregister": "Pre-registreer je rugbyteam voor een zonnig Valencia toernooi in de zomer van 2025 via het formulier en we nemen contact met je op voor meer details.",
+  "tournament_mal_altura_signup_btn": "Inschrijven",
+  "tournament_mal_altura_expect_title": "Wat je kunt verwachten",
+  "tournament_mal_altura_expect_1": "Rugby wedstrijden",
+  "tournament_mal_altura_expect_2": "Welkomstfeest",
+  "tournament_mal_altura_expect_3": "Afscheidfeest",
+  "tournament_mal_altura_program_title": "Programma",
+  "tournament_mal_altura_program_day1": "Donderdag - Aankomst",
+  "tournament_mal_altura_program_day1_desc": "Aankomst van teams, presentatie van het toernooi en welkomstfeest",
+  "tournament_mal_altura_program_day2": "Vrijdag - Competitie",
+  "tournament_mal_altura_program_day2_desc": "Rugby wedstrijden gedurende de hele dag, in 7vs7 modus op het veld, een helft van 15 minuten en een helft van 10 minuten"
 }
