--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -112,23 +112,23 @@
   "tournament_paella_program_sun_desc": "Día libre y despedida",
   "tournament_paella_program_mon": "Lunes",
   "tournament_paella_program_mon_desc": "Regreso de equipos",
-  "tournament_egorf_title": "EGORF 2026 Official Program",
+  "tournament_egorf_title": "EGORF 2026",
   "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promete fortalecer la fraternidad del rugby y dejar una huella positiva en la ciudad y sus visitantes.",
   "tournament_egorf_preregister": "Preinscribe a tu equipo de rugby para un torneo en Valencia en el verano de 2026 a través del formulario y nos pondremos en contacto contigo para más detalles.",
-  "tournament_egorf_signup_btn": "Sign up",
-  "tournament_egorf_expect_title": "What to expect",
-  "tournament_egorf_expect_1": "Intense rugby matches",
-  "tournament_egorf_expect_2": "Welcome ceremony at Umbracle",
-  "tournament_egorf_expect_3": "Closing ceremony at City of Arts",
-  "tournament_egorf_program_title": "Program",
-  "tournament_egorf_program_thu": "Thursday, June 11th",
-  "tournament_egorf_program_thu_desc": "📌 Team arrival – All day\n📌 Welcome Ceremony – 20:00h | Umbracle Terrace 🌟",
-  "tournament_egorf_program_fri": "Friday, June 12th",
-  "tournament_egorf_program_fri_desc": "🏉 Match Day – From 9:00h",
-  "tournament_egorf_program_sat": "Saturday, June 13th",
-  "tournament_egorf_program_sat_desc": "🌴 Free Day",
-  "tournament_egorf_program_sun": "Sunday, June 14th",
-  "tournament_egorf_program_sun_desc": "🏉 Match Day – From 9:00h\n🏆 Closing Ceremony – 20:00h | City of Arts and Sciences 🎇",
+  "tournament_egorf_signup_btn": "Inscribirme",
+  "tournament_egorf_expect_title": "Lo que puedes esperar",
+  "tournament_egorf_expect_1": "Partidos intensos de rugby",
+  "tournament_egorf_expect_2": "Ceremonia de bienvenida en el Umbracle",
+  "tournament_egorf_expect_3": "Ceremonia de clausura en la Ciudad de las Artes",
+  "tournament_egorf_program_title": "Programa",
+  "tournament_egorf_program_thu": "Jueves, 11 de junio",
+  "tournament_egorf_program_thu_desc": "📌 Llegada de equipos – Todo el día\n📌 Ceremonia de Bienvenida – 20:00h | Terraza Umbracle 🌟",
+  "tournament_egorf_program_fri": "Viernes, 12 de junio",
+  "tournament_egorf_program_fri_desc": "🏉 Día de partidos – Desde las 9:00h",
+  "tournament_egorf_program_sat": "Sábado, 13 de junio",
+  "tournament_egorf_program_sat_desc": "🌴 Día libre",
+  "tournament_egorf_program_sun": "Domingo, 14 de junio",
+  "tournament_egorf_program_sun_desc": "🏉 Día de partidos – Desde las 9:00h\n🏆 Ceremonia de Clausura – 20:00h | Ciudad de las Artes y las Ciencias 🎇",
   "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
   "tournament_mal_altura_description": "Ultima semana de Mayo del 2025 en Alcala de la selva, un pueblo entero de la comarca española, para disfrutar del rugby con amigos, buena música, y una gran fiesta de bienvenida y de despedida.",
   "tournament_mal_altura_preregister": "Preinscríbete ahora",
