--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -92,7 +92,7 @@
   "upcoming_tournaments_description_3": "Du 11 au 14 juin, à Valencia, en Espagne.",
   "more_information": "Plus d'informations",
   "tournament_paella_title": "Paella Cup 2026",
-  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_description": "Tournoi International de Hockey Vétéran à Valence. Du 12 au 14 juin 2025, Mister Valencia organisera la dixième édition de la Paella Cup. Ce prestigieux tournoi est reconnu pour son mélange parfait de sport, culture et activités sociales, le tout accompagné du climat agréable espagnol qui crée une atmosphère unique et inoubliable.",
   "tournament_paella_preregister": "Pré-inscrivez votre équipe de hockey pour un tournoi ensoleillé à Valencia en juillet 2026 via le formulaire et nous vous contacterons pour plus de détails.",
   "tournament_paella_signup_btn": "S'inscrire",
   "tournament_paella_expect_title": "Ce que vous pouvez attendre",
@@ -112,8 +112,8 @@
   "tournament_paella_program_sun_desc": "Journée libre et départ",
   "tournament_paella_program_mon": "Lundi",
   "tournament_paella_program_mon_desc": "Départ des équipes",
-  "tournament_egorf_title": "Programme officiel du EGORF 2026",
-  "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.",
+  "tournament_egorf_title": "EGORF 2026",
+  "tournament_egorf_description": "Tournoi International de Rugby Vétéran à Valence. Du 5 au 8 juin 2026, Valence sera le siège de la 18ème édition du European Golden Oldies Rugby Festival (EGORF). Ce festival emblématique réunit des équipes vétérans de toute l'Europe pour célébrer le rugby dans son essence : camaraderie, respect et divertissement. Avec son excellente infrastructure, son atmosphère accueillante et sa riche offre culturelle, Valence offre le cadre parfait pour une expérience sportive et sociale inoubliable. EGORF2026 promet de renforcer la fraternité du rugby et de laisser une empreinte positive sur la ville et ses visiteurs.",
   "tournament_egorf_preregister": "Pré-inscrivez votre équipe de rugby pour un tournoi ensoleillé à Valencia en juillet 2026 via le formulaire et nous vous contacterons pour plus de détails.",
   "tournament_egorf_signup_btn": "S'inscrire",
   "tournament_egorf_expect_title": "Ce que vous pouvez attendre",
