--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -89,7 +89,7 @@
   "upcoming_tournaments_description_3": "Dal 11 al 14 di giugno, a Valencia, Spagna.",
   "more_information": "Maggiori informazioni",
   "tournament_paella_title": "Paella Cup 2026",
-  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_description": "Torneo Internazionale di Hockey Veterano a Valencia. Dal 12 al 14 giugno 2025, Mister Valencia organizzerà la decima edizione della Paella Cup. Questo prestigioso torneo è riconosciuto per la sua perfetta miscela di sport, cultura e attività sociali, il tutto accompagnato dal piacevole clima spagnolo che crea un'atmosfera unica e indimenticabile.",
   "tournament_paella_preregister": "Preinscrivi il tuo team di hockey per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
   "tournament_paella_signup_btn": "Iscriviti",
   "tournament_paella_expect_title": "Cosa puoi aspettarti",
@@ -109,8 +109,8 @@
   "tournament_paella_program_sun_desc": "Giorno libero e partenza",
   "tournament_paella_program_mon": "Lunedì",
   "tournament_paella_program_mon_desc": "Partenza delle squadre",
-  "tournament_egorf_title": "Programma ufficiale del EGORF 2026",
-  "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.",
+  "tournament_egorf_title": "EGORF 2026",
+  "tournament_egorf_description": "Torneo Internazionale di Rugby Veterano a Valencia. Dal 5 all'8 giugno 2026, Valencia sarà la sede della 18ª edizione del European Golden Oldies Rugby Festival (EGORF). Questo festival emblematico riunisce squadre veterane da tutta Europa per celebrare il rugby nella sua essenza: cameratismo, rispetto e divertimento. Con la sua eccellente infrastruttura, atmosfera accogliente e ricca offerta culturale, Valencia offre il palcoscenico perfetto per un'esperienza sportiva e sociale indimenticabile. EGORF2026 promette di rafforzare la fratellanza del rugby e lasciare un'impronta positiva sulla città e sui suoi visitatori.",
   "tournament_egorf_preregister": "Preinscrivi il tuo team di rugby per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
   "tournament_egorf_signup_btn": "Iscriviti",
   "tournament_egorf_expect_title": "Cosa puoi aspettarti",
@@ -119,13 +119,13 @@
   "tournament_egorf_expect_3": "Festa di partenza",
   "tournament_egorf_program_title": "Programma",
   "tournament_egorf_program_thu": "Giovedì 11 di Giugno",
-  "tournament_egorf_program_thu_desc": "📌 Arrivo delle squadre – Tutto il giorno\n📌 Cérémonie de Bienvenue – 20:00h | Umbracle Terraza 🌟",
+  "tournament_egorf_program_thu_desc": "📌 Arrivo delle squadre – Tutto il giorno\n📌 Cerimonia di Benvenuto – 20:00h | Terrazza Umbracle 🌟",
   "tournament_egorf_program_fri": "Venerdì 12 di Giugno",
   "tournament_egorf_program_fri_desc": "🏉 Giorno di partita – Dalle 9:00h",
   "tournament_egorf_program_sat": "Sabato 13 di Giugno",
   "tournament_egorf_program_sat_desc": "🌴 Giorno libero",
   "tournament_egorf_program_sun": "Domenica 14 di Giugno",
-  "tournament_egorf_program_sun_desc": "🏉 Giorno di partita – Dalle 9:00h\n🏆 Cérémonie de clôture – 20:00h | Ciudad de las Artes y las Ciencias 🎇",
+  "tournament_egorf_program_sun_desc": "🏉 Giorno di partita – Dalle 9:00h\n🏆 Cerimonia di Chiusura – 20:00h | Città delle Arti e delle Scienze 🎇",
   "tournament_egorf_program_mon": "Lunedì 15 di Giugno",
   "tournament_egorf_program_mon_desc": "Partenza delle squadre",
   "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
