--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -112,8 +112,8 @@
     "tournament_paella_program_sun_desc": "Dia livre e despedida",
     "tournament_paella_program_mon": "Segunda-feira",
     "tournament_paella_program_mon_desc": "Retorno de equipes",
-    "tournament_egorf_title": "Programa Oficial do EGORF 2026",
-    "tournament_egorf_description": "Torneo Internacional de Rugby Veterano en Valencia. Del 5 al 8 de junio de 2026, Valencia será la sede de la 18ª edición del European Golden Oldies Rugby Festival (EGORF). Este emblemático festival reúne a equipos veteranos de toda Europa para celebrar el rugby en su esencia: compañerismo, respeto y diversión. Con su excelente infraestructura, ambiente acogedor y rica oferta cultural, Valencia ofrece el escenario perfecto para una experiencia deportiva y social inolvidable. EGORF2026 promet fortalecer la fraternidad del rugby et laisser une empreinte positive dans la ville et ses visiteurs.", 
+    "tournament_egorf_title": "EGORF 2026",
+    "tournament_egorf_description": "Torneio Internacional de Rugby Veterano em Valência. De 5 a 8 de junho de 2026, Valência será a sede da 18ª edição do European Golden Oldies Rugby Festival (EGORF). Este festival emblemático reúne equipas veteranas de toda a Europa para celebrar o rugby na sua essência: camaradagem, respeito e diversão. Com a sua excelente infraestrutura, ambiente acolhedor e rica oferta cultural, Valência oferece o cenário perfeito para uma experiência desportiva e social inesquecível. O EGORF2026 promete fortalecer a fraternidade do rugby e deixar uma marca positiva na cidade e nos seus visitantes.", 
     "tournament_egorf_preregister": "Pré-inscreva seu time de hóquei para um torneio soleado em Valencia no verão de 2026 através do formulário e nós entraremos em contato com você para mais detalhes.",
     "tournament_egorf_signup_btn": "Inscreva-se",
     "tournament_egorf_expect_title": "O que você pode esperar",
